Update creating a release.yml

--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -6,7 +6,10 @@ jobs :
   runs-on: ubuntu-latest
   
   steps:
-    
+    - name: Download content
+      uses: actions/download-artifact@v2
+      with:
+       name: build-project
     - name: Archieve site content
       uses: thedoctor0/zip-release@master
       with:
@@ -28,3 +31,19 @@ jobs :
         asset_name: site-v${{ github.run_number }}.zip
         asset_content_type: application/zip
         
+ build-project:
+       name: Build project
+       runs-on: ubuntu-latest
+       steps:
+         - name: Checkout code
+           uses: actions/checkout@v2
+         - name: Install NPM dependencies
+           run: npm install
+         - name: Build a project
+           run: npm run build
+         - name: upload a project
+           uses: actions/upload-artifact@v2
+           with:
+            name: project
+            path: out/
+         
