--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -4,7 +4,7 @@ jobs :
  release-project:
   name: Release project to github release
   runs-on: ubuntu-latest
-  
+  needs: build-project
   steps:
     - name: Download content
       uses: actions/download-artifact@v2
