--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -10,6 +10,6 @@ jobs :
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{ github.run_number }}
-        release_name: Release V${{ github.run_number }}
+        tag_name: ${{ github.run_number }}
+        release_name: Release ${{ github.run_number }}
          
