--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -1,18 +1,50 @@
 name: Release for the project
-on: 
- push:
-   branches: [ main ]
+on: push
 jobs :
  release-project:
-  permissions: write-all
   name: Release project to github release
   runs-on: ubuntu-latest
+  needs: build-project
   steps:
+    - name: Download content
+      uses: actions/download-artifact@v2
+      with:
+       name: build-project
+    - name: Archieve site content
+      uses: thedoctor0/zip-release@master
+      with:
+        filename: site.zip
+
     - name: Create Github Release
       uses: actions/create-release@v1
       env:
-       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.run_number }}
-        release_name: Release ${{ github.run_number }}
-         
+        tag_name: v${{ github.run_number }}
+        release_name: Release V${{ github.run_number }}
+        
+    - name: Upload asset to Github release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+        asset_path: ./site.zip
+        asset_name: site-v${{ github.run_number }}.zip
+        asset_content_type: application/zip
+        
+      build-project:
+       name: Build project
+       runs-on: ubuntu-latest
+       steps:
+         - name: Checkout code
+           uses: actions/checkout@v3
+         - name: Install NPM dependencies
+           run: npm install
+         - name: Build a project
+           run: npm run build
+         - name: upload a project
+           uses: actions/upload-artifact@v2
+           with:
+            name: project
+            path: out/
