--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -15,3 +15,9 @@ jobs :
       with:
         tag_name: ${{ github.run_number }}
         release_name: Release ${{ github.run_number }}
+    - name: To see the directory before checkout
+      run: dir
+    - name: TO make checkout
+      uses: actions/checkout@v2
+    - name: After checkout
+      run: dir
