--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this is for demo edit.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "build":"just printing build"
   },
   "repository": {
     "type": "git",
