--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -39,6 +39,8 @@ jobs :
            uses: actions/checkout@v3
          - name: Install NPM dependencies
            run: npm install
+         - name: Build
+           run: npm run test
          - name: upload a project
            uses: actions/upload-artifact@v2
            with:
