--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "build":"just printing build"
+    "build":"next build && next export"
+
+  },
+  "dependencies": {
+    "next": "12.1.0"
   },
   "repository": {
     "type": "git",
