--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -40,7 +40,7 @@ jobs :
          - name: Install NPM dependencies
            run: npm install
          - name: Build
-           run: npm run test
+           run: npm run build
          - name: upload a project
            uses: actions/upload-artifact@v2
            with:
