--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -37,10 +37,8 @@ jobs :
        steps:
          - name: Checkout code
            uses: actions/checkout@v3
-         - name: Install NPM dependencies
-           run: npm install
-         - name: Build
-           run: npm run build
+         - name: create release
+           run: zip -r release.zip .
          - name: upload a project
            uses: actions/upload-artifact@v2
            with:
