--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -6,14 +6,20 @@ jobs :
   runs-on: ubuntu-latest
   needs: build-project
   steps:
-    - name: Download content
-      uses: actions/download-artifact@v2
+    - name: Read release.zip and use it as a body of new release
+      run: |
+       r=$(cat path/to/release.zip)
+       r="${r//'%'/'%25'}"
+       r="${r//$'\n'/'%0A'}"                           
+       r="${r//$'\r'/'%0D'}"                             
+       echo "::set-output name=RELEASE_BODY::$r"   
+    - name: Upload Binaries to Release
+      uses: svenstaro/upload-release-action@v2
       with:
-       name: build-project
-    - name: Archieve site content
-      uses: thedoctor0/zip-release@master
-      with:
-        filename: site.zip
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref }}
+          body: |
+            ${{ steps.read_release.outputs.RELEASE_BODY }}
     - name: Create Github Release
       uses: actions/create-release@v1
       env:
@@ -21,15 +27,6 @@ jobs :
       with:
         tag_name: v${{ github.run_number }}
         release_name: Release V${{ github.run_number }}
-    - name: Upload asset to Github release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-        asset_path: ./site.zip
-        asset_name: site-v${{ github.run_number }}.zip
-        asset_content_type: application/zip
         
  build-project:
        name: Build project
