--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -6,6 +6,11 @@ jobs :
   runs-on: ubuntu-latest
   needs: build-project
   steps:
+  
+    - name: Chekout the repo
+      uses: actions/checkout@v2
+    - name: Print the dir
+      run: dir
     - name: Read release.zip and use it as a body of new release
       run: |
        r=$(cat path/to/release.zip)
