--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -24,7 +24,7 @@ jobs :
     - name: upload windows artifact
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./bin/release.zip
