--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -41,6 +41,8 @@ jobs :
            uses: actions/checkout@v3
          - name: create release
            run: zip -r release.zip .
+         - name: show dir after creating zip file
+           run: dir
          - name: upload a project
            uses: actions/upload-artifact@v2
            with:
