--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -28,7 +28,7 @@ jobs :
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./bin/release.zip
+        asset_path: README.md
         asset_name: Release.zip
         asset_content_type: application/zip
    
