--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -12,7 +12,10 @@ jobs :
       uses: actions/checkout@v2
     - name: Print the dir
       run: dir
-      
+    - name: create release
+      run: zip -r release.zip .
+    - name: Print the dir after create zip
+      run: dir
     - name: Create Github Release
       uses: actions/create-release@v1
       id: create_release
@@ -28,7 +31,7 @@ jobs :
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: README.md
+        asset_path: release.zip
         asset_name: Release.zip
         asset_content_type: application/zip
    
@@ -39,8 +42,7 @@ jobs :
        steps:
          - name: Checkout code
            uses: actions/checkout@v3
-         - name: create release
-           run: zip -r release.zip .
+    
          - name: show dir after creating zip file
            run: dir
          - name: upload a project
