--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -3,18 +3,17 @@ on: push
 jobs :
  release-project:
   permissions: write-all
-  name: Release project to github release
+  name: Automated project release
   runs-on: ubuntu-latest
-  needs: build-project
   steps:
    
     - name: Chekout the repo
       uses: actions/checkout@v2
-    - name: Print the dir
+    - name: Print the dir before creating the zip file
       run: dir
     - name: create release
       run: zip -r release.zip .
-    - name: Print the dir after create zip
+    - name: Print the dir after created zip file
       run: dir
     - name: Create Github Release
       uses: actions/create-release@v1
@@ -25,7 +24,7 @@ jobs :
         tag_name: v${{ github.run_number }}
         release_name: Release V${{ github.run_number }}  
       
-    - name: upload windows artifact
+    - name: upload a asset to release attachment
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -34,19 +33,4 @@ jobs :
         asset_path: release.zip
         asset_name: Release.zip
         asset_content_type: application/zip
-   
-        
- build-project:
-       name: Build project
-       runs-on: ubuntu-latest
-       steps:
-         - name: Checkout code
-           uses: actions/checkout@v3
-    
-         - name: show dir after creating zip file
-           run: dir
-         - name: upload a project
-           uses: actions/upload-artifact@v2
-           with:
-            name: project
-            path: release.zip
+  
