--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -18,6 +18,7 @@ jobs :
       run: dir
     - name: Create Github Release
       uses: actions/create-release@v1
+      id: create_release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
