--- a/.github/workflows/batVersion.yml
+++ b/.github/workflows/batVersion.yml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
+    # simply ckecking bat version
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
