--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -3,10 +3,37 @@ on:
  push:
   branches: [ main ]
 jobs :
+# This workflow contains a single job called "build"
+ create-build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Step 1 - Checkout main branch for Github
+        uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      - name: Step 2 - Setup a JDK 1.8
+        uses: actions/setup-java@v1
+        with: 
+          java-version: 1.8
+          
+      - name: Step 3 - Have Github actions build maven project
+        run: mvn -B package --file pom.xml
+        
+      - name: Step 4 - List the current directory
+        run: ls -a
+      - name: Step 5 - What is the target folder?
+        run: |
+          cd target 
+          ls -a
  release-project:
   permissions: write-all
   name: Automated project release
   runs-on: ubuntu-latest
+  needs: create-build
   steps:
     - name: Chekout the repo
       uses: actions/checkout@v2
