--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -33,7 +33,7 @@ jobs :
         uses: actions/upload-artifact@v2
         with:
          name: artifacts
-         path: out/
+         path: target/postApp.war
  release-project:
   permissions: write-all
   name: Automated project release
