--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -40,6 +40,10 @@ jobs :
   runs-on: ubuntu-latest
   needs: create-build
   steps:
+    - name: Download content
+      uses: actions/download-artifact@v2
+      with:
+       name: artifacts
     - name: Chekout the repo
       uses: actions/checkout@v2
     - name: Print the dir before creating the zip file
