--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -44,7 +44,8 @@ jobs :
       uses: actions/download-artifact@v2
       with:
        name: artifacts
-       
+    - name: Test artifact download
+      run: ls
     - name: Chekout the repo
       uses: actions/checkout@v2
     - name: Print the dir before creating the zip file
