Update creating a release.yml

--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -45,7 +45,7 @@ jobs :
       with:
        name: artifacts
     - name: Test artifact download
-      run: ls
+      run: ls -R
     - name: Chekout the repo
       uses: actions/checkout@v2
     - name: Print the dir before creating the zip file
