--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -48,6 +48,10 @@ jobs :
       run: ls -R
     - name: Chekout the repo
       uses: actions/checkout@v2
+    - name: What is the target folder?
+      run: |
+        cd target 
+        ls -a
     - name: Print the dir before creating the zip file
       run: dir
     - name: create release
