--- a/.github/workflows/creating a release.yml
+++ b/.github/workflows/creating a release.yml
@@ -44,7 +44,7 @@ jobs :
       uses: actions/download-artifact@v2
       with:
        name: artifacts
-       path: target
+       path: target/
     - name: Test artifact download
       run: ls -a
     - name: Chekout the repo
